sources/techjam/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lynx-svc
  namespace: lynx
spec:
  selector:
    app: lynx
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
